Ensure number of comments is an integer
Fixes #93 while core PR [1] is waiting to be released.

[1] https://github.com/mysociety/alaveteli/pull/5906

--- a/lib/views/general/blog.html.erb
+++ b/lib/views/general/blog.html.erb
@@ -21,7 +21,7 @@
               <a href="<%=item['comments'][0]%>"><%= n_(
                 "{{number_of_comments}} comment",
                 "{{number_of_comments}} comments",
-                item['comments'][1],
+                item['comments'][1].to_i,
                 :number_of_comments=>item['comments'][1]) %></a>
             <% end %>
           </em>
