--- a/lib/views/general/blog.html.erb
+++ b/lib/views/general/blog.html.erb
@@ -21,7 +21,7 @@
               <a href="<%=item['comments'][0]%>"><%= n_(
                 "{{number_of_comments}} comment",
                 "{{number_of_comments}} comments",
-                item['comments'][1].to_i,
+                item['comments'][1],
                 :number_of_comments=>item['comments'][1]) %></a>
             <% end %>
           </em>
