--- a/lib/views/help/_why_they_should_reply_by_email.html.erb
+++ b/lib/views/help/_why_they_should_reply_by_email.html.erb
@@ -1,3 +1,3 @@
-The 2013 access to information law says that an email is sufficient (<a href="<%= help_page_url(:anchor => 'full_address') %>">more details</a>).
+The 2013 access to information law says that an email is sufficient (<a href="<%= help_privacy_path(:anchor => 'full_address') %>">more details</a>).
 
 At the bottom of this page, write a reply to the authority explaining this to them.
