--- a/lib/views/help/unhappy.rw.html.erb
+++ b/lib/views/help/unhappy.rw.html.erb
@@ -28,7 +28,7 @@
 
 <p>
 <% if !@info_request.nil? %>
-    <%= link_to "Request an internal review", show_response_no_followup_path(:id => @info_request.id, :incoming_message_id => nil) + "?internal_review=1#followup", :class => 'link_button_green' %> and then write a message asking the authority to review your request.
+    <%= link_to "Request an internal review", new_request_followup_url(:request_id => @info_request.id) + "?internal_review=1#followup", :class => 'link_button_green' %> and then write a message asking the authority to review your request.
 <% else %>
     Hasi kuri paji y’ikibazo cyatanzwe kuri <%= site_name %>, hitamo “saba isuzuma”. 
     Hanyuma wandike ubutumwa usaba ko ikibazo  cyawe cyakorerwa isuzuma. Ushobora gushyiraho 
